apps/simple-test-1/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: simple-test-1
spec:
  selector:
    app: simple-test-1
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000

  type: ClusterIP
